clusters/dha-nkp/networkpolicies/aegis-allow-traefik-to-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aegis-allow-traefik-to-system
  namespace: aegis-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aegis-dummy-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kommander-default-workspace
      ports:
        - protocol: TCP
          port: 8080
